# mnist

./: CMakeLists.txt  download_data.py  mnist.h
fnn/: CMakeLists.txt  fnn.cpp
mnist2bmp/: CMakeLists.txt  mnist2bmp.cpp
regression/: CMakeLists.txt  regression.cpp
